[package]
name = "pets-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.14.0"
async-std = { version = "1.8.0", features = ["attributes"] }
serde = { version = "1.0", features = ["derive"] }
serde_json ={version = "1", features = ["preserve_order"]} 
sea-orm = { version = "^0", features = [ "sqlx-mysql", "runtime-async-std-native-tls" ] }
dotenv = "0.15.0"
femme = "2.2.1"
